[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/wyvernbox/editor/item_browser.gd" type="Script" id=1]

[node name="Browse" type="PopupPanel"]
visible = true
margin_left = -600.0
margin_top = 8.0
margin_right = -9.0
margin_bottom = 352.0
script = ExtResource( 1 )

[node name="Box" type="HSplitContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 587.0
margin_bottom = 340.0

[node name="Box" type="VBoxContainer" parent="Box"]
margin_right = 188.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="FolderList" type="Tree" parent="Box/Box"]
margin_right = 188.0
margin_bottom = 312.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
allow_reselect = true
allow_rmb_select = true
hide_folding = true
select_mode = 1

[node name="Rescan" type="Button" parent="Box/Box"]
margin_top = 316.0
margin_right = 188.0
margin_bottom = 336.0
text = "Rescan"

[node name="Panel" type="MarginContainer" parent="Box"]
margin_left = 200.0
margin_right = 583.0
margin_bottom = 336.0
size_flags_horizontal = 3

[node name="Box" type="VBoxContainer" parent="Box/Panel"]
margin_right = 383.0
margin_bottom = 336.0

[node name="Filter" type="LineEdit" parent="Box/Panel/Box"]
margin_right = 383.0
margin_bottom = 24.0
placeholder_text = "Filter items..."
caret_blink = true
caret_blink_speed = 0.5

[node name="Margins" type="MarginContainer" parent="Box/Panel/Box"]
margin_top = 28.0
margin_right = 383.0
margin_bottom = 318.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Box/Panel/Box/Margins"]
margin_right = 383.0
margin_bottom = 290.0

[node name="ItemList" type="ItemList" parent="Box/Panel/Box/Margins"]
margin_right = 383.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
max_columns = 0
fixed_column_width = 48
icon_mode = 0

[node name="ItemPath" type="Label" parent="Box/Panel/Box"]
margin_top = 322.0
margin_right = 383.0
margin_bottom = 336.0
text = "Drag items into lists to add"
align = 1
autowrap = true

[node name="Buttons" type="HBoxContainer" parent="Box/Panel/Box"]
visible = false
margin_top = 316.0
margin_right = 383.0
margin_bottom = 336.0

[node name="Idk" type="Button" parent="Box/Panel/Box/Buttons"]
margin_right = 383.0
margin_bottom = 20.0
size_flags_horizontal = 3

[connection signal="item_activated" from="Box/Box/FolderList" to="." method="_on_folder_list_item_activated"]
[connection signal="item_selected" from="Box/Box/FolderList" to="." method="_on_folder_list_item_selected"]
[connection signal="pressed" from="Box/Box/Rescan" to="." method="_on_rescan_pressed"]
[connection signal="text_changed" from="Box/Panel/Box/Filter" to="." method="_on_filter_text_changed"]
[connection signal="gui_input" from="Box/Panel/Box/Margins/ItemList" to="." method="_on_item_list_gui_input"]
